[gd_scene load_steps=11 format=3 uid="uid://bderngk5ajgxd"]

[ext_resource type="Script" path="res://Melee_Logic.gd" id="1_y0nmf"]
[ext_resource type="Texture2D" uid="uid://1bvbb2fxutk6" path="res://Art/MeleeEnemy.png" id="2_ehjnk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q0e57"]
size = Vector2(38, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_e30i3"]
radius = 34.1321

[sub_resource type="AtlasTexture" id="AtlasTexture_mbti7"]
atlas = ExtResource("2_ehjnk")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xrd88"]
atlas = ExtResource("2_ehjnk")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_45m6v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbti7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xrd88")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_wdvyc"]
resource_name = "melee_walk"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_44ddy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w1nm1"]
_data = {
"RESET": SubResource("Animation_44ddy"),
"melee_walk": SubResource("Animation_wdvyc")
}

[node name="Melee" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_y0nmf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_q0e57")

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(1, 4)
shape = SubResource("CircleShape2D_e30i3")

[node name="Attack_Timer" type="Timer" parent="PlayerDetection"]
wait_time = 0.25

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_45m6v")
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w1nm1")
}

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="timeout" from="PlayerDetection/Attack_Timer" to="." method="_on_attack_timer_timeout"]
